# PaperSkill

./: .coveragerc  .env_sample  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py  views.py
nginx/: nginx.conf
paperskill/: admin.py  apps.py  form.py  models.py  paginators.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
paperskill/migrations/: 0001_initial.py  0002_alter_course_owner.py  0003_course_is_paid.py  0004_course_price.py  0005_course_category.py  0006_lesson_order.py
paperskill/templates/paperskill/: answer.html  base.html  contacts.html  header.html  index.html
paperskill/templates/paperskill/course/: confirm_delete.html  detail.html  form.html  list.html  list2.html
paperskill/templates/paperskill/lesson/: detail.html  form.html
users/: admin.py  forms.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_avatar_user_country_user_phone_number_and_more.py  0002_user_bought_courses_user_courses.py  0003_payment.py  0004_remove_user_username_user_completed_courses.py  0005_payment_payment_status.py  0006_user_username.py
users/templates/users/: login.html  payment_cancel.html  payment_success.html  profile.html  register.html
